--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ MarkupSafe==1.1.1
 Werkzeug==0.15.5
 numpy>=1.9.2
 scipy>=0.15.1
-scikit-learn>=0.18
+scikit-learn==0.22.1
 matplotlib>=1.4.3
 pandas>=0.19
+flasgger==0.9.4
+seaborn==0.10.1
+emoji==0.5.4
 streamlit
